// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > matches snapshot when editing 1`] = `
<div
  aria-describedby="id"
  class="bg-green-100 rounded shadow-sm border-none mb-3 group p-0 min-h-[100px] relative flex flex-col overflow-hidden"
  data-rfd-drag-handle-context-id="mock-context-1"
  data-rfd-drag-handle-draggable-id="mock-draggable-1"
  data-rfd-draggable-context-id="mock-context-1"
  data-rfd-draggable-id="mock-draggable-1"
  draggable="false"
  role="button"
  tabindex="0"
>
  <div
    class="p-3"
    style="height: 0px;"
  >
    <textarea
      class="w-full h-[calc(100%-40px)] rounded border border-gray-300 focus:border-blue-500 focus:ring-1 focus:ring-blue-500 text-sm p-2 resize-none"
    >
      Test Card Content
    </textarea>
    <div
      class="flex justify-end space-x-2 mt-2"
    >
      <button
        aria-label="Cancel"
        class="px-2.5 py-1 text-xs font-medium text-gray-700 bg-gray-100 rounded hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-gray-300 cursor-pointer"
      >
        Cancel
      </button>
      <button
        aria-label="Save"
        class="px-2.5 py-1 text-xs font-medium bg-blue-500 text-white rounded hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 cursor-pointer"
      >
        Save
      </button>
    </div>
  </div>
</div>
`;

exports[`Card > matches snapshot when not owner 1`] = `
<div
  aria-describedby="id"
  class="bg-green-100 rounded shadow-sm border-none mb-3 group p-0 min-h-[100px] relative flex flex-col overflow-hidden"
  data-rfd-drag-handle-context-id="mock-context-1"
  data-rfd-drag-handle-draggable-id="mock-draggable-1"
  data-rfd-draggable-context-id="mock-context-1"
  data-rfd-draggable-id="mock-draggable-1"
  draggable="false"
  role="button"
  tabindex="0"
>
  <div
    class="absolute right-0 top-0 flex flex-col items-center py-2 px-0 min-w-[30px] z-10"
  />
  <div
    class="flex-grow py-3 mr-[30px] ml-[30px]"
  >
    <p
      class="text-sm text-gray-900 whitespace-pre-wrap break-words leading-relaxed text-left"
    >
      Test Card Content
    </p>
  </div>
  <div
    class="px-3 pb-2 relative"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center"
      >
        <button
          class="p-1 rounded flex items-center transition-colors cursor-pointer text-gray-500 hover:text-green-600 hover:bg-green-50"
        >
          <div
            data-testid="thumbs-up-icon"
          >
            Upvote
          </div>
        </button>
        <span
          class="text-xs font-medium mx-1"
        >
          5
        </span>
        <button
          class="p-1 rounded flex items-center transition-colors cursor-pointer text-gray-500 hover:text-red-600 hover:bg-red-50"
        >
          <div
            data-testid="thumbs-down-icon"
          >
            Downvote
          </div>
        </button>
      </div>
      <div
        class="text-right"
      >
        <div
          class="text-xs text-gray-500 italic"
        >
          Test User
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card > matches snapshot when owner 1`] = `
<div
  aria-describedby="id"
  class="bg-green-100 rounded shadow-sm border-none mb-3 group p-0 min-h-[100px] relative flex flex-col overflow-hidden"
  data-rfd-drag-handle-context-id="mock-context-1"
  data-rfd-drag-handle-draggable-id="mock-draggable-1"
  data-rfd-draggable-context-id="mock-context-1"
  data-rfd-draggable-id="mock-draggable-1"
  draggable="false"
  role="button"
  tabindex="0"
>
  <div
    class="absolute right-0 top-0 flex flex-col items-center py-2 px-0 min-w-[30px] z-10"
  >
    <button
      aria-label="Delete"
      class="p-1 rounded text-red-600 hover:text-red-700 hover:bg-red-100 transition-colors cursor-pointer"
    >
      <div
        data-testid="trash-icon"
      >
        Delete
      </div>
    </button>
    <button
      aria-label="Edit"
      class="p-1 mt-2 rounded text-blue-600 hover:text-blue-700 hover:bg-blue-100 transition-colors cursor-pointer"
    >
      <div
        data-testid="edit-icon"
      >
        Edit
      </div>
    </button>
  </div>
  <div
    class="flex-grow py-3 mr-[30px] ml-[30px]"
  >
    <p
      class="text-sm text-gray-900 whitespace-pre-wrap break-words leading-relaxed text-left"
    >
      Test Card Content
    </p>
  </div>
  <div
    class="px-3 pb-2 relative"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center"
      >
        <button
          class="p-1 rounded flex items-center transition-colors cursor-pointer text-gray-500 hover:text-green-600 hover:bg-green-50"
        >
          <div
            data-testid="thumbs-up-icon"
          >
            Upvote
          </div>
        </button>
        <span
          class="text-xs font-medium mx-1"
        >
          5
        </span>
        <button
          class="p-1 rounded flex items-center transition-colors cursor-pointer text-gray-500 hover:text-red-600 hover:bg-red-50"
        >
          <div
            data-testid="thumbs-down-icon"
          >
            Downvote
          </div>
        </button>
      </div>
      <div
        class="text-right"
      >
        <div
          class="text-xs text-gray-500 italic"
        >
          Test User
        </div>
      </div>
    </div>
  </div>
</div>
`;
